
# (BTW - if you use include_HEADERS instead of pkginclude_HEADERS, you 
# will end up with your headers installed in /usr/local/include rather than 
# /usr/local/include/cigicl)
# headers to be installed when 'make install' is run:
pkginclude_HEADERS = \
	CigiAerosolRespV3.h\
	CigiAnimationStopV3.h\
	CigiAnimationTable.h\
	CigiArtPartCtrlV1.h\
	CigiArtPartCtrlV2.h\
	CigiArtPartCtrlV3.h\
	CigiAtmosCtrl.h\
	CigiBaseAerosolResp.h\
	CigiBaseAnimationStop.h\
	CigiBaseArtPartCtrl.h\
	CigiBaseCollDetSegDef.h\
	CigiBaseCollDetSegResp.h\
	CigiBaseCollDetVolDef.h\
	CigiBaseCollDetVolResp.h\
	CigiBaseCompCtrl.h\
	CigiBaseConfClampEntityCtrl.h\
	CigiBaseEarthModelDef.h\
	CigiBaseEntityCtrl.h\
	CigiBaseEnvCondReq.h\
	CigiBaseEnvCtrl.h\
	CigiBaseEnvRgnCtrl.h\
	CigiBaseEventNotification.h\
	CigiBaseEventProcessor.h\
	CigiBaseHatHotReq.h\
	CigiBaseHatHotResp.h\
	CigiBaseIGCtrl.h\
	CigiBaseIGMsg.h\
	CigiBaseLosResp.h\
	CigiBaseLosSegReq.h\
	CigiBaseLosVectReq.h\
	CigiBaseMaritimeSurfaceCtrl.h\
	CigiBaseMaritimeSurfaceResp.h\
	CigiBaseMotionTrackCtrl.h\
	CigiBasePacket.h\
	CigiBasePositionReq.h\
	CigiBasePositionResp.h\
	CigiBaseRateCtrl.h\
	CigiBaseSOF.h\
	CigiBaseSensorCtrl.h\
	CigiBaseSensorResp.h\
	CigiBaseShortArtPartCtrl.h\
	CigiBaseSignalProcessing.h\
	CigiBaseSpecEffDef.h\
	CigiBaseTerrestrialSurfaceCtrl.h\
	CigiBaseTerrestrialSurfaceResp.h\
	CigiBaseTrajectoryDef.h\
	CigiBaseViewCtrl.h\
	CigiBaseViewDef.h\
	CigiBaseWaveCtrl.h\
	CigiBaseWeatherCondResp.h\
	CigiBaseWeatherCtrl.h\
	CigiCelestialCtrl.h\
	CigiCollDetSegDefV1.h\
	CigiCollDetSegDefV2.h\
	CigiCollDetSegDefV3.h\
	CigiCollDetSegRespV1.h\
	CigiCollDetSegRespV2.h\
	CigiCollDetSegRespV3.h\
	CigiCollDetVolDefV2.h\
	CigiCollDetVolDefV3.h\
	CigiCollDetVolRespV2.h\
	CigiCollDetVolRespV3.h\
	CigiCompCtrlV1.h\
	CigiCompCtrlV2.h\
	CigiCompCtrlV3.h\
	CigiConfClampEntityCtrlV3.h\
	CigiDefaultPacket.h\
	CigiEarthModelDefV3.h\
	CigiEntityCtrlV1.h\
	CigiEntityCtrlV2.h\
	CigiEntityCtrlV3.h\
	CigiEnvCondReqV3.h\
	CigiEnvCtrlV1.h\
	CigiEnvCtrlV2.h\
	CigiEnvRgnCtrlV3.h\
	CigiErrorCodes.h\
	CigiEventList.h\
	CigiEventNotificationV3.h\
	CigiException.h\
	CigiExceptions.h\
	CigiHatHotReqV3.h\
	CigiHatHotReqV3_2.h\
	CigiHatHotRespV3.h\
	CigiHatHotRespV3_2.h\
	CigiHatHotXRespV3.h\
	CigiHatHotXRespV3_2.h\
	CigiHatReqV1.h\
	CigiHatReqV2.h\
	CigiHatRespV1.h\
	CigiHatRespV2.h\
	CigiHoldEnvCtrl.h\
	CigiHostSession.h\
	CigiHotReqV2.h\
	CigiHotRespV2.h\
	CigiIGCtrlV1.h\
	CigiIGCtrlV2.h\
	CigiIGCtrlV3.h\
	CigiIGCtrlV3_2.h\
	CigiIGMsgV2.h\
	CigiIGMsgV3.h\
	CigiIGSession.h\
	CigiIO.h\
	CigiIncomingMsg.h\
	CigiLosRespV1.h\
	CigiLosRespV2.h\
	CigiLosRespV3.h\
	CigiLosRespV3_2.h\
	CigiLosSegReqV1.h\
	CigiLosSegReqV2.h\
	CigiLosSegReqV3.h\
	CigiLosSegReqV3_2.h\
	CigiLosVectReqV1.h\
	CigiLosVectReqV2.h\
	CigiLosVectReqV3.h\
	CigiLosVectReqV3_2.h\
	CigiLosXRespV3.h\
	CigiLosXRespV3_2.h\
	CigiMaritimeSurfaceCtrlV3.h\
	CigiMaritimeSurfaceRespV3.h\
	CigiMessage.h\
	CigiMotionTrackCtrlV3.h\
	CigiOutgoingMsg.h\
	CigiPositionReqV3.h\
	CigiPositionRespV3.h\
	CigiRateCtrlV1.h\
	CigiRateCtrlV2.h\
	CigiRateCtrlV3.h\
	CigiRateCtrlV3_2.h\
	CigiSOFV1.h\
	CigiSOFV2.h\
	CigiSOFV3.h\
	CigiSOFV3_2.h\
	CigiSensorCtrlV1.h\
	CigiSensorCtrlV2.h\
	CigiSensorCtrlV3.h\
	CigiSensorRespV1.h\
	CigiSensorRespV2.h\
	CigiSensorRespV3.h\
	CigiSensorXRespV3.h\
	CigiSession.h\
	CigiShortArtPartCtrlV3.h\
	CigiShortCompCtrlV3.h\
	CigiSpecEffDefV1.h\
	CigiSpecEffDefV2.h\
	CigiSwapping.h\
	CigiTerrestrialSurfaceCtrlV3.h\
	CigiTerrestrialSurfaceRespV3.h\
	CigiTrajectoryDefV1.h\
	CigiTrajectoryDefV2.h\
	CigiTrajectoryDefV3.h\
	CigiTypes.h\
	CigiVersionJumpTable.h\
	CigiViewCtrlV1.h\
	CigiViewCtrlV2.h\
	CigiViewCtrlV3.h\
	CigiViewDefV1.h\
	CigiViewDefV2.h\
	CigiViewDefV3.h\
	CigiWaveCtrlV3.h\
	CigiWeatherCondRespV3.h\
	CigiWeatherCtrlV1.h\
	CigiWeatherCtrlV2.h\
	CigiWeatherCtrlV3.h


