cmake_minimum_required(VERSION 2.8)

FIND_PACKAGE(SWIG REQUIRED)
INCLUDE(${SWIG_USE_FILE})

FIND_PACKAGE(PythonLibs)
INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

SET(CMAKE_SWIG_FLAGS "-Wall")

SET_SOURCE_FILES_PROPERTIES(swig.i PROPERTIES CPLUSPLUS ON)
SET_PROPERTY(SOURCE swig.i PROPERTY SWIG_FLAGS "-builtin" "-DCIGI_SPEC")

SWIG_ADD_MODULE(cigi python swig.i)
SWIG_LINK_LIBRARIES(cigi ${PYTHON_LIBRARIES} cigicl-shared)

execute_process(COMMAND python -c "from distutils.sysconfig import get_python_lib; print (get_python_lib())" OUTPUT_VARIABLE PYTHON_SITE_PACKAGES OUTPUT_STRIP_TRAILING_WHITESPACE)
execute_process(COMMAND python3 -c "from distutils.sysconfig import get_python_lib; print (get_python_lib())" OUTPUT_VARIABLE PYTHON3_SITE_PACKAGES OUTPUT_STRIP_TRAILING_WHITESPACE)

install(TARGETS _cigi DESTINATION ${PYTHON_SITE_PACKAGES})
install(FILES ${CMAKE_BINARY_DIR}/scripting/cigi.py DESTINATION ${PYTHON_SITE_PACKAGES})

install(TARGETS _cigi DESTINATION ${PYTHON3_SITE_PACKAGES})
install(FILES ${CMAKE_BINARY_DIR}/scripting/cigi.py DESTINATION ${PYTHON3_SITE_PACKAGES})
