lib_LTLIBRARIES = libcigicl.la 

# all of the source files needed to compile the lib
libcigicl_la_SOURCES = \
	CigiAerosolRespV3.cpp\
	CigiAnimationStopV3.cpp\
	CigiAnimationTable.cpp\
	CigiArtPartCtrlV1.cpp\
	CigiArtPartCtrlV2.cpp\
	CigiArtPartCtrlV3.cpp\
	CigiAtmosCtrl.cpp\
	CigiBaseAerosolResp.cpp\
	CigiBaseArtPartCtrl.cpp\
	CigiBaseCircleSymbolData.cpp\
	CigiBaseCollDetSegResp.cpp\
	CigiBaseCollDetVolDef.cpp\
	CigiBaseCollDetVolResp.cpp\
	CigiBaseConfClampEntityCtrl.cpp\
	CigiBaseEntityCtrl.cpp\
	CigiBaseEnvCondReq.cpp\
	CigiBaseEnvCtrl.cpp\
	CigiBaseEnvRgnCtrl.cpp\
	CigiBaseEventNotification.cpp\
	CigiBaseHatHotReq.cpp\
	CigiBaseIGCtrl.cpp\
	CigiBaseLosResp.cpp\
	CigiBaseLosSegReq.cpp\
	CigiBaseLosVectReq.cpp\
	CigiBaseMaritimeSurfaceCtrl.cpp\
	CigiBaseMaritimeSurfaceResp.cpp\
	CigiBaseMotionTrackCtrl.cpp\
	CigiBasePositionReq.cpp\
	CigiBasePositionResp.cpp\
	CigiBaseSOF.cpp\
	CigiBaseSensorCtrl.cpp\
	CigiBaseSensorResp.cpp\
	CigiBaseShortArtPartCtrl.cpp\
	CigiBaseShortSymbolCtrl.cpp\
	CigiBaseSpecEffDef.cpp\
	CigiBaseSymbolCircleDef.cpp\
	CigiBaseSymbolCtrl.cpp\
	CigiBaseSymbolLineDef.cpp\
	CigiBaseSymbolSurfaceDef.cpp\
	CigiBaseSymbolTextDef.cpp\
	CigiBaseTerrestrialSurfaceCtrl.cpp\
	CigiBaseTrajectoryDef.cpp\
	CigiBaseViewCtrl.cpp\
	CigiBaseViewDef.cpp\
	CigiBaseWaveCtrl.cpp\
	CigiBaseWeatherCondResp.cpp\
	CigiBaseWeatherCtrl.cpp\
	CigiCelestialCtrl.cpp\
	CigiCircleSymbolDataV3_3.cpp\
	CigiCollDetSegDefV1.cpp\
	CigiCollDetSegDefV2.cpp\
	CigiCollDetSegDefV3.cpp\
	CigiCollDetSegRespV1.cpp\
	CigiCollDetSegRespV2.cpp\
	CigiCollDetSegRespV3.cpp\
	CigiCollDetVolDefV2.cpp\
	CigiCollDetVolDefV3.cpp\
	CigiCollDetVolRespV2.cpp\
	CigiCollDetVolRespV3.cpp\
	CigiCompCtrlV1.cpp\
	CigiCompCtrlV2.cpp\
	CigiCompCtrlV3.cpp\
	CigiCompCtrlV3_3.cpp\
	CigiConfClampEntityCtrlV3.cpp\
	CigiDefaultPacket.cpp\
	CigiEarthModelDefV3.cpp\
	CigiEntityCtrlV1.cpp\
	CigiEntityCtrlV2.cpp\
	CigiEntityCtrlV3.cpp\
	CigiEnvCondReqV3.cpp\
	CigiEnvCtrlV1.cpp\
	CigiEnvCtrlV2.cpp\
	CigiEnvRgnCtrlV3.cpp\
	CigiEventNotificationV3.cpp\
	CigiHatHotReqV3.cpp\
	CigiHatHotReqV3_2.cpp\
	CigiHatHotRespV3.cpp\
	CigiHatHotRespV3_2.cpp\
	CigiHatHotXRespV3.cpp\
	CigiHatHotXRespV3_2.cpp\
	CigiHatReqV1.cpp\
	CigiHatReqV2.cpp\
	CigiHatRespV1.cpp\
	CigiHatRespV2.cpp\
	CigiHostSession.cpp\
	CigiHotReqV2.cpp\
	CigiHotRespV2.cpp\
	CigiIGCtrlV1.cpp\
	CigiIGCtrlV2.cpp\
	CigiIGCtrlV3.cpp\
	CigiIGCtrlV3_2.cpp\
	CigiIGMsgV2.cpp\
	CigiIGMsgV3.cpp\
	CigiIGSession.cpp\
	CigiIO.cpp\
	CigiIncomingMsg.cpp\
	CigiLosRespV1.cpp\
	CigiLosRespV2.cpp\
	CigiLosRespV3.cpp\
	CigiLosRespV3_2.cpp\
	CigiLosSegReqV1.cpp\
	CigiLosSegReqV2.cpp\
	CigiLosSegReqV3.cpp\
	CigiLosSegReqV3_2.cpp\
	CigiLosVectReqV1.cpp\
	CigiLosVectReqV2.cpp\
	CigiLosVectReqV3.cpp\
	CigiLosVectReqV3_2.cpp\
	CigiLosXRespV3.cpp\
	CigiLosXRespV3_2.cpp\
	CigiMaritimeSurfaceCtrlV3.cpp\
	CigiMaritimeSurfaceRespV3.cpp\
	CigiMessage.cpp\
	CigiMotionTrackCtrlV3.cpp\
	CigiOutgoingMsg.cpp\
	CigiPositionReqV3.cpp\
	CigiPositionRespV3.cpp\
	CigiRateCtrlV1.cpp\
	CigiRateCtrlV2.cpp\
	CigiRateCtrlV3.cpp\
	CigiRateCtrlV3_2.cpp\
	CigiSOFV1.cpp\
	CigiSOFV2.cpp\
	CigiSOFV3.cpp\
	CigiSOFV3_2.cpp\
	CigiSensorCtrlV1.cpp\
	CigiSensorCtrlV2.cpp\
	CigiSensorCtrlV3.cpp\
	CigiSensorRespV1.cpp\
	CigiSensorRespV2.cpp\
	CigiSensorRespV3.cpp\
	CigiSensorXRespV3.cpp\
	CigiSession.cpp\
	CigiShortArtPartCtrlV3.cpp\
	CigiShortCompCtrlV3.cpp\
	CigiShortCompCtrlV3_3.cpp\
	CigiShortSymbolCtrlV3_3.cpp\
	CigiSpecEffDefV1.cpp\
	CigiSpecEffDefV2.cpp\
	CigiSwapping.cpp\
	CigiSymbolCircleDefV3_3.cpp\
	CigiSymbolCtrlV3_3.cpp\
	CigiSymbolLineDefV3_3.cpp\
	CigiSymbolSurfaceDefV3_3.cpp\
	CigiSymbolTextDefV3_3.cpp\
	CigiTerrestrialSurfaceCtrlV3.cpp\
	CigiTerrestrialSurfaceRespV3.cpp\
	CigiTrajectoryDefV1.cpp\
	CigiTrajectoryDefV2.cpp\
	CigiTrajectoryDefV3.cpp\
	CigiVertexSymbolDataV3_3.cpp\
	CigiViewCtrlV1.cpp\
	CigiViewCtrlV2.cpp\
	CigiViewCtrlV3.cpp\
	CigiViewDefV1.cpp\
	CigiViewDefV2.cpp\
	CigiViewDefV3.cpp\
	CigiWaveCtrlV3.cpp\
	CigiWeatherCondRespV3.cpp\
	CigiWeatherCtrlV1.cpp\
	CigiWeatherCtrlV2.cpp\
	CigiWeatherCtrlV3.cpp

INCLUDES = \
	-I$(top_srcdir)/include

# The arguments below will be passed to libtool (a linker wrapper) and 
# are very necessary.  Particularly, the "-no-undefined" flag is required for 
# building DLLs on cygwin/win32 platforms.
libcigicl_la_LDFLAGS = \
		-no-undefined\
		-version-info 0:0:0

