SET(DUMMYID_HDRS
DefaultProc.h
Network.h
XArtPartCtrl.h
XAtmosCtrl.h
XCelestialCtrl.h
XCollDetSegDef.h
XCollDetVolDef.h
XCompCtrl.h
XConfClampEntityCtrl.h
XEarthModelDef.h
XEntityCtrl.h
XEnvCondReq.h
XEnvRgnCtrl.h
XEventNotification.h
XHatHotReq.h
XIGCtrl.h
XLosSegReq.h
XLosVectReq.h
XMaritimeSurfaceCtrl.h
XMotionTrackCtrl.h
XPostionReq.h
XRateCtrl.h
XSensorCtrl.h
XShortArtPartCtrl.h
XShortCompCtrl.h
XShortSymbolCtrlV3_3.h
XSymbolCircleDefV3_3.h
XSymbolCloneV3_3.h
XSymbolCtrlV3_3.h
XSymbolLineDefV3_3.h
XSymbolSurfaceDefV3_3.h
XSymbolTextDefV3_3.h
XTerrestrialSurfaceCtrl.h
XTrajectory.h
XViewCtrl.h
XViewDef.h
XWaveCtrl.h
XWeatherCtrl.h
)

SET(DUMMYIG_SRCS
DefaultProc.cpp
DummyIG.cpp
Network.cpp
XArtPartCtrl.cpp
XAtmosCtrl.cpp
XCelestialCtrl.cpp
XCollDetSegDef.cpp
XCollDetVolDef.cpp
XCompCtrl.cpp
XConfClampEntityCtrl.cpp
XEarthModelDef.cpp
XEntityCtrl.cpp
XEnvCondReq.cpp
XEnvRgnCtrl.cpp
XEventNotification.cpp
XHatHotReq.cpp
XIGCtrl.cpp
XLosSegReq.cpp
XLosVectReq.cpp
XMaritimeSurfaceCtrl.cpp
XMotionTrackCtrl.cpp
XPostionReq.cpp
XRateCtrl.cpp
XSensorCtrl.cpp
XShortArtPartCtrl.cpp
XShortCompCtrl.cpp
XShortSymbolCtrlV3_3.cpp
XSymbolCircleDefV3_3.cpp
XSymbolCloneV3_3.cpp
XSymbolCtrlV3_3.cpp
XSymbolLineDefV3_3.cpp
XSymbolSurfaceDefV3_3.cpp
XSymbolTextDefV3_3.cpp
XTerrestrialSurfaceCtrl.cpp
XTrajectory.cpp
XViewCtrl.cpp
XViewDef.cpp
XWaveCtrl.cpp
XWeatherCtrl.cpp
)

INCLUDE_DIRECTORIES(../../include)

ADD_EXECUTABLE(CigiDummyIG ${DUMMYIG_HDRS} ${DUMMYIG_SRCS})
TARGET_LINK_LIBRARIES(CigiDummyIG cigicl-shared tinyxml)

INSTALL(TARGETS CigiDummyIG DESTINATION bin)
